data/derived/sp14/progs/unify/prog3855.ml.out
Characters 49-50:
  if length xs = 0 then xs = 0;;
                             ^
Error: This expression has type int but an expression was expected of type
         'a list
